--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "@use-it/interval": "^1.0.0",
+    "chart.js": "^2.9.4",
     "ml5": "^0.6.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
